# wbtools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
tests/: config_reader.py  corpus.py  nlp.py  paper.py
tests/data/text_files/: 00026804_McCracken05.txt  00026804_McCracken05_supp.txt  00026805_Zhao05.txt  00026805_Zhao05_supp.txt  00026806_Grishok05.txt  00026807_Afshar05.txt  00026807_TableS.txt  00026808_Hogarth05.txt  00026809_Gu05.txt  00026810_Nanji05.txt  00026811_Ayyadevara05.txt  00026812_Shingai05.txt  00026813_Karenko05.txt  00026813_TableS2-3etc.txt  00026814_Inoue05.txt  00026815_Fairlie05.txt  00026816_Scorrano05.txt  00026817_Kahn-Kirby05.txt  00026818_Zheng05.txt  00026819_Andrews05.txt  00026820_Reichert05.txt  00026821_Luke-Glaser05.txt  00026821_Luke-Glaser05_supp.txt  00026822_Qin05.txt  00026823_Styer05.txt
tests/db/: dbmanager.py  expression.py  generic.py  test_afp.py  test_antibody.py  test_expression.py  test_generic.py
tests/lib/: nlp.py  scraping.py  test_literature_index.py  test_scraping.py  test_text_preprocessing.py  test_text_similarity.py
tests/lib/entity_extraction/: test_email_addresses.py  (+2 more)
tests/literature/: corpus.py  paper.py  test_corpus.py  test_paper.py
wbtools/: corpus.py
wbtools/corpus/: corpus.py  paper.py
wbtools/db/: abstract_manager.py  afp.py  antibody.py  dbmanager.py  expression.py  gene.py  generic.py  paper.py  person.py
wbtools/lib/: dbmanager.py  nlp.py  scraping.py
wbtools/literature/: corpus.py  paper.py  person.py
wbtools/utils/: alliance.py  okta_utils.py
(+11 files in other folders)
