[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wbtools"
version = "3.2.0"
authors = [
    {name = "Valerio Arnaboldi", email = "valearna@caltech.edu"},
]
description = "Interface to WormBase (www.wormbase.org) curation data, including literature management and NLP functions"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "psycopg2-binary",
    "numpy~=1.19.2",
    "fabric~=2.5.0",
    "gensim~=3.8.3",
    "nltk~=3.5",
    "regex~=2020.10.28",
    "pdfminer.six==20201018",
    "pytz~=2021.1",
    "pandas~=1.3.3",
    "requests~=2.31.0",
    "python-dateutil~=2.8.2",
    "python-dotenv~=1.0.0",
    "grobid-client",
]

[project.urls]
Homepage = "https://github.com/WormBase/wbtools"
Repository = "https://github.com/WormBase/wbtools"